Change this patch to a better fix, bump the PORTREVISION.

GNOME Bugzilla:	http://bugzilla.gnome.org/show_bug.cgi?id=432387
Submitted by:	Charles Kerr (developer)
Tested by:	pav